# Information_theory_and_coding

./: CMakeLists.txt  main.cpp
Cyclic_redundancy_check/: BinaryPolynomial.h  CRC.cpp  CRC.h
Hamming_encoding/: HammingEncoding.cpp  HammingEncoding.h
Huffman_coding/: Archiver.cpp  Archiver.h
LZW/: Archiver_LZW.cpp  Archiver_LZW.h
